# shb-digital

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DECISIONS.md  README.md  SPEC.md  design-qa.md  docker-compose.prod.yml  docker-compose.yml  portal-copy-audit.md  production-copy-audit.md  run.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  errors.py  main.py
backend/app/api/: __init__.py  access.py  approvals.py  audit.py  compare.py  conversations.py  cost.py  form_intake.py  interrupt.py  models.py  notifications.py  sse.py  stats.py
backend/app/auth/: deps.py  google.py  permissions.py  router.py  security.py  service.py
backend/app/db/: config.py  models.py  reset_demo.py  seed_from_lab.py  seed_if_empty.py  seed_users.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1aef6233c6ac_s1_users_table_auth_d_19.py  1ec70b10a031_s2_legal_tables_t2_2.py  24573677068a_s1_initial_schema_customers_loans_cic_.py  448101c1915d_s1_server_default_uuid_ops_tables_d_28c.py  4b282d74ff31_s1_conv_id_text_drop_fk_d_31.py  4e736cf0daae_s4_conversations_provider_model_per_.py  51dc39084c9b_s8_users_owner_id_customer_persona_d_56.py  53a8d21ecbe9_s1_add_businesses_collaterals_d_28b_.py  7c9843743a88_s4_tool_calls_audit_table_t4_1.py  8e8edc5b9187_s3_approvals_table_t3_1.py  a1f7c2e93b04_s7_legal_3tru_tables_t7_1.py  (+10 more)
backend/app/integrations/: __init__.py  third_party_mock.py
backend/app/mount/: mount_role.py  pg_adapter.py  read_scope.py  schema.py
backend/app/notify/: email.py  hooks.py
backend/app/orch/: __init__.py  audit_emit.py  common_tools.py  disburse_guard.py  dispatch.py  gated.py  gated_types.py  instrument.py  main_prompts.py  main_session.py  main_skill.py  ops_bridge.py  orch_tools.py  providers.py  registry.py  room.py  store.py  store_approvals.py  store_audit.py  sub_runner.py  tool_scope.py  verdict.py
backend/app/sse/: __init__.py  bus.py  emit.py  redact.py
backend/tests/: conftest.py  test_approvals.py  test_approvals_display.py  test_audit.py  test_auth.py  test_card_sync.py  test_cleanup_orphans_s6.py  test_compare.py  test_concurrency_d33.py  test_concurrency_d33_tester.py  test_conversations_crud_t15.py  test_cost_stats_t162.py  test_cross_owner_guard_t94.py  test_dev_skip_auth.py  test_gate_s1_e2e.py  test_gate_s1_e2e_mechanics.py  test_gate_s2_e2e_mechanics.py  test_gate_s3_authz_tester.py  test_gate_s3_e2e_tester.py  test_gate_s3_gated_disburse_tester.py  test_gate_s4_audit_tester.py  test_gate_s4_loop_bound_tester.py  test_gated.py  test_google_auth.py  test_health.py  test_hotfix_f2_f3.py  test_instrument_t161.py  test_interrupt.py  test_legal_datalayer_t71.py  test_legal_port_t72.py  test_models_api.py  test_mount_credit.py  test_notify_t92.py  test_ops_disburse_gated_t123b.py  test_orch_dispatch.py  test_orch_invariant.py  test_orch_live_smoke.py  test_orch_spine_tester.py  test_persona_d56.py  test_persona_d56_e2e_tester.py  (+22 more)
bench/: .gitignore  README.md  (+4 more)
(+379 files in other folders)
