[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "claude-agent-sdk>=0.1.0",
    "fastapi[standard]>=0.139.2",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.51.0",
]

# T12-2 (D-68): embed group OPTIONAL — notes_search (1/4 tầng retrieval) cần model bkai CPU. CI/deploy
# MẶC ĐỊNH KHÔNG kéo (torch nặng); cài riêng `uv sync --extra embed`. torch pin CPU (không CUDA — SPEC
# "local CPU"). Lib vắng → notes_search trả env_missing graceful (LAB thiết kế), 3 tầng kia chạy bình thường.
[project.optional-dependencies]
embed = [
    "sentence-transformers>=3.0",
    "pyvi>=0.1.1",
    "torch>=2.0",
]

# torch từ index CPU-only (tránh CUDA ~2.5G nuốt đĩa/image). Chỉ áp khi cài extra embed.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# app.* nằm ở backend/ (.), roles.* nằm ở repo root (..) — D-26 layout
pythonpath = [".", ".."]

[tool.ruff]
line-length = 120
target-version = "py311"
# roles/ = labpack COPY từ LAB (N1 — VỎ không sửa logic); loại khỏi lint của vỏ.
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008: Depends() ở default arg là IDIOM CHUẨN FastAPI (không phải bug) — false positive.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# email.py: template mail HTML table-based + inline CSS (T9-2 addendum) — dòng dài BẮT BUỘC
# (inline CSS không tách được không phá HTML/anti-spam). E501 chỉ cho file template này.
"app/notify/email.py" = ["E501"]
